recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:6: error: '(' expected but identifier found.
    avance(lenght);
    ^Spiral:6: error: illegal start of simple expression
    avance(lenght);
                  ^