recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if (steps == 0){
    
  }
  else if 
  	avance(lenght);
  	gauche(angle); forme;
  	spiral(step-1, angle, lenght+increment, increment);
}

spitral(5, 90, 0, 3);